--- a/package.json
+++ b/package.json
@@ -65,5 +65,6 @@
   "engines": {
     "node": ">=20.16.0 || >=22.3.0"
   },
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "version": "0.0.1"
 }
